--- a/modules/dovecot/secure_data.php.example
+++ b/modules/dovecot/secure_data.php.example
@@ -1,8 +1,14 @@
 <?php
-	
+
 	// Place secure and sensitive data here
 	$mysql_server = "localhost";
 	$mysql_user = "username";
 	$mysql_pass = "password";
-	
+
+	# set this option to true if you want to use ssl key/cert for mysql
+	$mysql_use_ssl = false;
+	$mysql_key = '/path/to/key';
+	$mysql_crt = '/path/to/crt';
+	$mysql_ca = '/path/to/ca';
+
 ?>
